...
// license that can be found in the LICENSE file.

/* StartScreenViewController */
"openingWallet" = "Opening wallet...";

/* Wallet Setup */
"createNewWallet" = "Create a new wallet";
"restoreExistingWallet" = "Restore an existing wallet";
"wallet" = "Wallet";
"introMessage" = "Welcome to Decred Wallet,\n a secure & open-source mobile wallet.";
"myWallet" = "mywallet";
"default_" = "default";
"migratingWallet" = "Migrating wallet";
...
"unlock" = "Unlock";
"wrongSecurityCode" = "Wrong %@ %@. Please try again.";

/* Password Setup */
"emptyPasswordNotAllowed" = "Password cannot be empty";
"passwordsDoNotMatch" = "Passwords do not match";
"createPassword" = "Create a %@ password";

/* Request Password */
"enterCurrentSpendingPassword" = "Enter Current Spending Password";
"promptStartupPassword" = "Enter Current Startup Password";
"password" = "Password";
"invalidInput" = "invalid input.";
...
"confirmPasswordPlaceholder"="Confirm %@ password";

/* Request PIN and PIN Setup */
"enterPIN" = "Enter %@ PIN";
"enterCurrentSpendingPIN" = "Enter Current Spending PIN";
"promptStartupPIN" = "Enter Current Startup PIN";
"createPIN" = "Create a %@ PIN";
"confirmPIN" = "Enter %@ PIN again";
"pinsDidNotMatch" = "PINs did not match. Try again.";
"pin" = "PIN";
"next" = "Next";
"create" = "Create";

/* Request Biometric */
"promptStartupPassOrPIN" = "Use Startup PIN/Password";
"promptTouchIDUsageUsage" = "Touch ID is required to use Decred Wallet";
"promptFaceIDUsageUsage" = "Face ID is required to use Decred Wallet";
...
"receivingAccount" = "Receiving Account";
"receiveInfo" = "Each time you request a payment, a new address is created to protect your privacy.";

/* Wallets -> Backup seed */
"notBackedUp" = "Not backed up";
"backupSeedPhrase" = "Back up seed words";
"backupWarningText" = "Verify your seed words backup so you can recover your funds when needed.";

/* Wallets -> Add new wallet */
"createOrImportWallet" = "Create or import a wallet";
"confirmToCreateNewWallet" = "Confirm to create new wallet";
"confirmToImportWallet" = "Confirm to import wallet";
"walletsLimitError" = "Limit of 1 wallet per 1 gig of ram on the device";
...

/* Wallet Settings */
"spendingPinPass" = "Spending PIN/ Password";
"changeSpendingPinPass" = "Change spending PIN/password";
"notifications" = "Notifications";
"incomingTransactions" = "Incoming transactions";
"removeWalletFromDevice" = "Remove wallet from device";
"disconnectDeleteWallet"= "Disconnect/cancel sync before deleting wallet";
"databaseType" = "Database type";
"confirmToUseBiometric" = "Confirm to use Biometric";

/* Wallet Settings -> Change Spending PIN/Password */
"confirmToChange" = "Confirm to change";
...
"secRemaining" = "%d sec";

/* Pop Ups */
"clear" = "Clear";
"error" = "Error";
"retry" = "Retry";
"ok" = "OK";
"confirm" = "Confirm";
"remove" = "Remove";
"cancel" = "Cancel";
"back" = "Back";
"clearFields" =  "Clear fields";
"copiedSuccessfully" = "Copied successfully.";
"addrCopied" = "Address copied!";
"previousOutpointCopied" = "Previous outpoint copied!";
...
"help" = "Help";
"gotIt" = "Got it";
"security" = "Security";

/* Seed Backup Reminder */
"keepInMind" = "Keep in mind";
"viewSeedPhrase" = "View seed words";
"reminderLabel1" = "The <bold>33-word seed words</bold> is EXTREMELY IMPORTANT.";
"reminderLabel2" = "Seed words is <bold>the only way</bold> to restore your wallet.";
"reminderLabel3" = "It is recommended to store your seed words in a <green>physical format</green> (e.g. write down on a paper).";
"reminderLabel4" = "It is highly discouraged to store your seed words in any <orange>digital format</orange> (e.g. screenshot).";
"reminderLabel5" = "Anyone with your seed words <orange>can steal your funds</orange>. DO NOT show it to anyone.";

...
"writeDownStep1_2" = "Step 1/2";
"writeDownStep2_2" = "Step 2/2";

/* Seed Backup Verify */
"writeDownAll33Words" = "Write down all 33 words in the correct order.";
"your33word" = "Your 33-word seed words";
"iHaveWroteDown" = "I have written down all 33 words";
"verify" = "Verify";
"backupSuccessTitle" = "Your seed words backup is verified";
"backupSuccessDesc" = "Be sure to store your seed words backup in a secure location.";
"backToWallets" = "Back to Wallets";
"failedToVerify" = "Failed to verify. Please go through every words and try again.";
"verifying" = "Verifying...";
...
