...
                                                <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="16"/>
                                                <color key="textColor" name="text4"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dha-hr-I4A" customClass="DropMenuButton" customModule="Decred_Wallet" customModuleProvider="target">
                                                <rect key="frame" x="386" y="16" width="24" height="38.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="more_button"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="24" id="5FV-Ek-O4f"/>
                                                </constraints>
                                                <state key="normal" image="ic_more"/>
                                            </button>
                                        </subviews>
...
