...
                                                                                <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="20"/>
                                                                                <color key="textColor" name="text1"/>
                                                                                <nil key="highlightedColor"/>
                                                                            </label>
                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GcG-b3-nUG" customClass="Button" customModule="Decred_Wallet" customModuleProvider="target">
                                                                                <rect key="frame" x="288" y="16" width="94" height="24"/>
                                                                                <accessibility key="accessibilityConfiguration" identifier="connectionButton"/>
                                                                                <constraints>
                                                                                    <constraint firstAttribute="height" constant="24" id="8DA-8A-P7D"/>
                                                                                </constraints>
                                                                                <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="14"/>
                                                                                <color key="tintColor" red="0.035294117647058823" green="0.078431372549019607" blue="0.25098039215686274" alpha="1" colorSpace="calibratedRGB"/>
                                                                                <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
...
