...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w6P-Kg-Hyj">
                                <rect key="frame" x="0.0" y="565" width="375" height="82"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="miY-8h-rc7" customClass="Button" customModule="Decred_Wallet" customModuleProvider="target">
                                        <rect key="frame" x="24" y="16" width="327" height="42"/>
                                        <color key="backgroundColor" red="0.16078431369999999" green="0.43921568630000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="seedVerify"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="42" id="uLm-lD-L1q"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="18"/>
                                        <state key="normal" title="Verify">
                                            <color key="titleColor" name="text"/>
...
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="xibLocalizedStringKey" value="backupSuccessDesc"/>
                                </userDefinedRuntimeAttributes>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VcD-Al-wic">
                                <rect key="frame" x="24" y="588" width="327" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="backToWallet"/>
                                <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="18"/>
                                <state key="normal" title="Back to Wallets">
                                    <color key="titleColor" name="primary"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="xibLocalizedStringKey" value="backToWallets"/>
...
